--- a/Configurations/main.cfg
+++ b/Configurations/main.cfg
@@ -9,12 +9,11 @@
 #               - erase_old_file: If 1, then (1) the combination file is overwritten and (2) the model number (identifier) is reset to 0. 
 #                                 If 0, then (1) append the combination file and (2) model number = last model number + 1
 random 4 # forest_type, followed by the forest_params. If forest_type=random, then forest_params is a single value that corresponds to the Number of samples
-asymptotic_mm_freeDp_numaxspread_curvepmodes_v1	 		# Name of the model. asymptotic_mm_freeDp_curvepmodes_v1 is a model iterating on what was learnt from asymptotic_v1, v2, v3 to generate a star with mixed modes
-generate_cfg_from_synthese_file_Wscaled_act_asym_a1ovGamma 	#Name of the model. See models_database.pro for a list of available models
-     HNR   a1ovGamma    lmax     a3    beta_asym   i     # XXX_factor = 1 means that we just take the input quantity. use lower/higher factor to tweak this
-     30        0.1         2.     0.0    0     	   0.0     #val_min, put -1 to use the values of the synthese file for a1, a3
-     30        1.0         2.     0.0    0     	   90.0   #val_max
-     1.         1.         1.     1.     1.    		1     #If forest_type="random" ==> 1=Variable OR 0=Constant. If forest_type="grid" then must be the stepsize of the grid
+generate_cfg_from_synthese_file_Wscaled_act_asym_a1ovGamma 	    ref_in_file      #Name of the model followed by reference file (if any). See models_database.pro for a list of available models
+     HNR   a1ovGamma  Gamma_at_numax     a3    beta_asym   i       				  #Variable names
+     30        0.1         1.     		0.0    0     	   0.0     	 #val_min, put -1 to use the values of the synthese file for a1, a3
+     30        1.0         1.     		0.0    0     	   90.0  	 #val_max
+     1.         1.         0.     		1.     1.    		1    	 #If forest_type="random" ==> 1=Variable OR 0=Constant. If forest_type="grid" then must be the stepsize of the grid
 Tobs  Cadence   Naverage
 365.    60       1
 1     # It is erase_old_files. If set to 1, will remove old Combination.txt and restart counting from 1. Otherwise append Combination.txt
