--- a/Configurations/main.cfg
+++ b/Configurations/main.cfg
@@ -9,7 +9,7 @@
 #               - erase_old_file: If 1, then (1) the combination file is overwritten and (2) the model number (identifier) is reset to 0. 
 #                                 If 0, then (1) append the combination file and (2) model number = last model number + 1
 random 4 # forest_type, followed by the forest_params. If forest_type=random, then forest_params is a single value that corresponds to the Number of samples
-generate_cfg_from_synthese_file_Wscaled_act_asym_a1ovGamma 	    ref_in_file      #Name of the model followed by reference file (if any). See models_database.pro for a list of available models
+generate_cfg_from_synthese_file_Wscaled_act_asym_a1ovGamma 	  /Users/obenomar/Documents/GitHub/Spectra-Simulator-C/Configurations/infiles/8379927_1111kasoc_synthese.in      #Name of the model followed by reference file (if any). See models_database.pro for a list of available models
      HNR   a1ovGamma  Gamma_at_numax     a3    beta_asym   i       				  #Variable names
      30        0.1         1.     		0.0    0     	   0.0     	 #val_min, put -1 to use the values of the synthese file for a1, a3
      30        1.0         1.     		0.0    0     	   90.0  	 #val_max
@@ -17,5 +17,5 @@ generate_cfg_from_synthese_file_Wscaled_act_asym_a1ovGamma 	    ref_in_file     
 Tobs  Cadence   Naverage
 365.    60       1
 1     # It is erase_old_files. If set to 1, will remove old Combination.txt and restart counting from 1. Otherwise append Combination.txt
-0     # Do you want plots ? 0 = No, 1 = Yes
+1     # Do you want plots ? 0 = No, 1 = Yes
 1     # Do you list values of the input model in the output ascii file?
