--- a/Configurations/main.cfg
+++ b/Configurations/main.cfg
@@ -8,15 +8,15 @@
 #		- forest_type: either grid or random. Currently, only random (uniform) is implemented.
 #               - erase_old_file: If 1, then (1) the combination file is overwritten and (2) the model number (identifier) is reset to 0. 
 #                                 If 0, then (1) append the combination file and (2) model number = last model number + 1
-random 1 # forest_type, followed by the forest_params. If forest_type=random, then forest_params is a single value that corresponds to the Number of samples
+random 100 # forest_type, followed by the forest_params. If forest_type=random, then forest_params is a single value that corresponds to the Number of samples
 asymptotic_mm_freeDp_numaxspread_curvepmodes_v3	 		# Name of the model. asymptotic_mm_freeDp_curvepmodes_v1 is a model iterating on what was learnt from asymptotic_v1, v2, v3 to generate a star with mixed modes
 all		        # Used template(s) name(s). If several, randomly select one/iteration. If set to 'all', will use all *.template files in Configuration/templates
 nurot_env nurot_core   Dnu  epsilon    delta0l_percent  beta_p_star  nmax_spread  DP1    alpha    q      SNR    maxGamma   numax_spread    Vl1    Vl2    Vl3   H0_spread    A_Pgran   B_Pgran  C_Pgran     A_taugran   B_taugran   C_taugran   P      N0
-0.1286      0.1286     20.    0.       0.5              0.000         5           75     0.00     0.1    5.     0.1        15              1      0.25   0.0   10               1      -2.       0.        1             -1.          0.       2.     1.   #val_min
-0.3858      3.858      60.    1.       3                0.100         5           200    0.05     0.3    100.   0.5        15              1.75   0.80   0.1   10               1      -2.       0.        1             -1.          0.       2.     1.   #val_max
-1.           1.        1.     1.       1.       		1.            0.          1.     1.       1.     1.     1.         0.              1.     1.     1.    0                0.      0.       0.        0.             0           0        0      0.   #If forest_type="random" ==> 1=Variable OR 0=Constant. If forest_type="grid" then must be the stepsize of the grid
+0.1286      0.1286     20.    0.       0.5              0.000         5           75     0.00     0.1    5.     0.1        15              1      0.25   0.0   10              0.8     -2.2       0.        0.8           -1.2         0.      1.8    0.1   #val_min
+0.3858      3.858      60.    1.       3                0.100         5           200    0.05     0.3    100.   1.5        15              1.75   0.80   0.1   10              1.2     -1.8      0.5        1.2           -0.8        0.5      2.2    0.4   #val_max
+1.           1.        1.     1.       1.       		1.            0.          1.     1.       1.     1.     1.         0.              1.     1.     1.    0                1.      1.        1.        1.             1           1        1      1   #If forest_type="random" ==> 1=Variable OR 0=Constant. If forest_type="grid" then must be the stepsize of the grid
 #Tobs   Cadence  Naverage
-1000.    300       1
+1000.    120       1
 1     # It is erase_old_files. If set to 1, will remove old Combination.txt and restart counting from 1. Otherwise append Combination.txt
 1     # Do you want plots ? 0 = No, 1 = Yes
 1     # Do you list values of the input model in the output ascii file?
