--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,10 +31,12 @@ option(BUILD_ON_DALMA "Building for NYU DALMA Supercomputer" OFF)
 
 if(NOT BUILD_ON_DALMA)
 	if(CMAKE_COMPILER_IS_GNUCXX)
-		set(CMAKE_CXX_FLAGS "-O2 -fopenmp")
+    set(CMAKE_CXX_FLAGS "-O2")
+		#set(CMAKE_CXX_FLAGS "-O2 -fopenmp")
 	endif()
 	if (APPLE)
-		set(CMAKE_CXX_FLAGS "-O2 -fopenmp=libomp")
+    set(CMAKE_CXX_FLAGS "-O2")
+		#set(CMAKE_CXX_FLAGS "-O2 -fopenmp=libomp")
 	endif()
 else()
 	message(STATUS "Building for NYU DALMA Supercomputer...")
@@ -103,7 +105,9 @@ if (WITH_OPENMP)
 	    #set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
 	    #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
 	    #set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
-      string(APPEND CMAKE_CXX_FLAGS " -fopenmp")
+      if(WITH_OPENMP)
+        string(APPEND CMAKE_CXX_FLAGS_RELEASE " -fopenmp")
+      endif()
   endif()
 #	else()
 #		message(FATAL_ERROR "OpenMP not found. Use -DWITH_OPENMP=OFF to build without OpenMP")
