--- a/external/ARMM/config/make_star.cfg
+++ b/external/ARMM/config/make_star.cfg
@@ -40,6 +40,7 @@
 # a[j]_l[x] : a coefficient j for the degree x
 # params_harvey_like: Noise parameters scaling with numax. [A_Pgran ,  B_Pgran , C_Pgran   ,  A_taugran ,  B_taugran  , C_taugran    , p      N0]. See Karoff+2010 or Kallinger+2014
 #                Recommended coefficients for the scaling are Pgran = A numax^B + C with A=10^-4 and B=-2, C=0. t_gran = A numax^B + C with A=1 and B=-1 and C=0
+# legacynoise: Boolean. If set to 1, uses params_harvey_like as per defined above. Otherwise, it will interpret params_harvey_like as a full set of Nharvey profiles + white noise. Allows to generate more than one harvey-like noise brackground. 
 # --------
 # global params
 file_template=../templates/Sun.template
@@ -85,3 +86,4 @@ a5_l3=0.
 a6_l3=0.1
 # Noise background
 params_harvey_like= 0.0001 -2 0 1 -1 0 2 0.1
+legacynoise=1
