--- a/.github/workflows/cmake_allOS.yml
+++ b/.github/workflows/cmake_allOS.yml
@@ -28,12 +28,16 @@ jobs:
           sudo apt-get install -y libgsl-dev
           sudo apt-get install -y build-essential
           sudo apt-get install -y cmake
-
+        env:
+          EIGEN3_INCLUDE_DIR: /usr/include/eigen3
+          
       - name: Install Dependencies (macOS)
         if: startsWith(runner.os, 'macOS')
         run: |
           brew install gnuplot eigen boost gsl cmake
-
+        env:
+          EIGEN3_INCLUDE_DIR: /usr/local/include/eigen3
+    
       - name: Configure CMake
         run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
 
