Add leveled logging with log-level control
Introduce a lightweight logger with debug/info/warn/error levels, --log-level option, and stream redirection for legacy std::cout/cerr. Convert core CLI output to LOG_* macros, refine stream severity detection, and add an invalid log-level test.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,6 +71,7 @@ set(SOURCES_MAIN  #_COMMON
     noise_models.cpp
 	    ioproc.cpp
 	    random_JB.cpp
+	    logging.cpp
 	    rng.cpp
 	    combi.cpp
     stellar_models.cpp
