Enable docs/CI automation and parity verification
Align mixed-mode delta0l handling with master so outputs remain comparable.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,6 +73,7 @@ set(SOURCES_MAIN  #_COMMON
 	    random_JB.cpp
 	    logging.cpp
 	    rng.cpp
+	    models_registry.cpp
 	    combi.cpp
     stellar_models.cpp
     models_database_grid.cpp
@@ -137,10 +138,48 @@ if(NOT BOOST_INCLUDE_DIR)
 	message(FATAL_ERROR "Boost headers not found (expected boost/filesystem.hpp). Install Boost or set CMAKE_PREFIX_PATH.")
 endif()
 
-find_library(BOOST_FILESYSTEM_LIBRARY NAMES boost_filesystem)
-find_library(BOOST_PROGRAM_OPTIONS_LIBRARY NAMES boost_program_options)
-find_library(BOOST_IOSTREAMS_LIBRARY NAMES boost_iostreams)
-find_library(BOOST_SYSTEM_LIBRARY NAMES boost_system)
+# Prefer libraries from the same Boost root when available.
+set(BOOST_LIBRARY_DIRS "")
+if(DEFINED BOOST_LIBRARYDIR)
+	list(APPEND BOOST_LIBRARY_DIRS "${BOOST_LIBRARYDIR}")
+endif()
+if(DEFINED ENV{BOOST_LIBRARYDIR})
+	list(APPEND BOOST_LIBRARY_DIRS "$ENV{BOOST_LIBRARYDIR}")
+endif()
+set(BOOST_ROOT_DIR "${BOOST_INCLUDE_DIR}")
+if(EXISTS "${BOOST_INCLUDE_DIR}/boost")
+	set(BOOST_ROOT_DIR "${BOOST_INCLUDE_DIR}")
+else()
+	get_filename_component(BOOST_ROOT_DIR "${BOOST_INCLUDE_DIR}" DIRECTORY)
+endif()
+if(EXISTS "${BOOST_ROOT_DIR}/stage/lib")
+	list(APPEND BOOST_LIBRARY_DIRS "${BOOST_ROOT_DIR}/stage/lib")
+endif()
+if(EXISTS "${BOOST_ROOT_DIR}/lib")
+	list(APPEND BOOST_LIBRARY_DIRS "${BOOST_ROOT_DIR}/lib")
+endif()
+list(REMOVE_DUPLICATES BOOST_LIBRARY_DIRS)
+
+unset(BOOST_FILESYSTEM_LIBRARY CACHE)
+find_library(BOOST_FILESYSTEM_LIBRARY NAMES boost_filesystem PATHS ${BOOST_LIBRARY_DIRS} NO_DEFAULT_PATH)
+if(NOT BOOST_FILESYSTEM_LIBRARY)
+	find_library(BOOST_FILESYSTEM_LIBRARY NAMES boost_filesystem)
+endif()
+unset(BOOST_PROGRAM_OPTIONS_LIBRARY CACHE)
+find_library(BOOST_PROGRAM_OPTIONS_LIBRARY NAMES boost_program_options PATHS ${BOOST_LIBRARY_DIRS} NO_DEFAULT_PATH)
+if(NOT BOOST_PROGRAM_OPTIONS_LIBRARY)
+	find_library(BOOST_PROGRAM_OPTIONS_LIBRARY NAMES boost_program_options)
+endif()
+unset(BOOST_IOSTREAMS_LIBRARY CACHE)
+find_library(BOOST_IOSTREAMS_LIBRARY NAMES boost_iostreams PATHS ${BOOST_LIBRARY_DIRS} NO_DEFAULT_PATH)
+if(NOT BOOST_IOSTREAMS_LIBRARY)
+	find_library(BOOST_IOSTREAMS_LIBRARY NAMES boost_iostreams)
+endif()
+unset(BOOST_SYSTEM_LIBRARY CACHE)
+find_library(BOOST_SYSTEM_LIBRARY NAMES boost_system PATHS ${BOOST_LIBRARY_DIRS} NO_DEFAULT_PATH)
+if(NOT BOOST_SYSTEM_LIBRARY)
+	find_library(BOOST_SYSTEM_LIBRARY NAMES boost_system)
+endif()
 
 if(NOT BOOST_FILESYSTEM_LIBRARY)
 	message(FATAL_ERROR "Boost.Filesystem library not found (libboost_filesystem).")
@@ -165,6 +204,16 @@ include_directories(${BOOST_INCLUDE_DIR})
 
 add_executable(${CMAKE_PROJECT_NAME}  ${SOURCES_MAIN})
 target_include_directories(${CMAKE_PROJECT_NAME} PRIVATE ${CMAKE_SOURCE_DIR})
+if(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+  target_compile_definitions(${CMAKE_PROJECT_NAME} PRIVATE BOOST_NO_CXX98_FUNCTION_BASE)
+  if(EXISTS "/opt/homebrew/opt/llvm/lib/c++/libc++.dylib")
+    target_link_directories(${CMAKE_PROJECT_NAME} PRIVATE /opt/homebrew/opt/llvm/lib/c++)
+    target_link_options(${CMAKE_PROJECT_NAME} PRIVATE -Wl,-rpath,/opt/homebrew/opt/llvm/lib/c++)
+  endif()
+  foreach(dir IN LISTS BOOST_LIBRARY_DIRS)
+    target_link_options(${CMAKE_PROJECT_NAME} PRIVATE -Wl,-rpath,${dir})
+  endforeach()
+endif()
 if(MACOS)
   find_package(Eigen3 REQUIRED NO_MODULE)
   target_compile_definitions(${CMAKE_PROJECT_NAME}  PRIVATE MACOS)
