--- a/.github/workflows/cmake_UbuntuMac.yml
+++ b/.github/workflows/cmake_UbuntuMac.yml
@@ -1,10 +1,10 @@
-name: CMake
+name: CI
 
 on:
   push:
-    branches: [ "beta" ]
+    branches: [ "master" ]
   pull_request:
-    branches: [ "beta" ]
+    branches: [ "master" ]
 
 env:
   BUILD_TYPE: Release
@@ -17,7 +17,7 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest]
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Install Dependencies (Ubuntu)
         if: startsWith(runner.os, 'Linux')
@@ -36,7 +36,10 @@ jobs:
           brew install gnuplot eigen boost gsl cmake
     
       - name: Configure CMake
-        run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+        run: cmake -S ${{github.workspace}} -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
 
       - name: Build
-        run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
+        run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}} -j
+
+      - name: Run tests
+        run: python3 -m unittest discover -s tests
