Run CI/docs on modernization branch
Allow workflow_dispatch and branch triggers for modernization/phase0.

--- a/.github/workflows/cmake_UbuntuMac.yml
+++ b/.github/workflows/cmake_UbuntuMac.yml
@@ -2,9 +2,10 @@ name: CI
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "master", "modernization/phase0" ]
   pull_request:
-    branches: [ "master" ]
+    branches: [ "master", "modernization/phase0" ]
+  workflow_dispatch:
 
 env:
   BUILD_TYPE: Release
