--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -2,7 +2,7 @@ name: Docs
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "master", "modernization/phase0" ]
   workflow_dispatch:
 
 permissions:
