Fix MkDocs strict build warnings
Include Doxygen Readme in nav, remove broken link, and pin MkDocs versions.

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -29,7 +29,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y doxygen
           python -m pip install --upgrade pip
-          python -m pip install mkdocs mkdocs-material
+          python -m pip install -r docs/requirements.txt
 
       - name: Build Doxygen HTML
         run: |
