--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,5 +20,7 @@ nav:
       - generate_cfg_from_synthese_file_Wscaled_aj_GRANscaled_Kallinger2014: models/generate_cfg_from_synthese_file_Wscaled_aj_GRANscaled_Kallinger2014.md
       - asymptotic_mm_freeDp_numaxspread_curvepmodes_v3_GRANscaled_Kallinger2014: models/asymptotic_mm_freeDp_numaxspread_curvepmodes_v3_GRANscaled_Kallinger2014.md
   - Legacy Models: legacy_models.md
-  - API Reference: api.md
+  - API Reference:
+      - Overview: api.md
+      - Doxygen Readme: Readme.md
   - Modernization Plan: Modernization_Plan.md
