--- a/.github/workflows/cmake_UbuntuMac.yml
+++ b/.github/workflows/cmake_UbuntuMac.yml
@@ -42,5 +42,8 @@ jobs:
       - name: Build
         run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}} -j
 
+      - name: Run C++ unit/property tests (ctest)
+        run: ctest --test-dir ${{github.workspace}}/build --output-on-failure
+
       - name: Run tests
         run: python3 -m unittest discover -s tests
